MODON MRE BPDEV/force-app/main/default/objects/Integration_Error_Messages__mdt/Integration_Error_Messages__mdt.object-meta.xml
<CustomObject>
    <label>Integration Error Messages</label>
    <pluralLabel>Integration Error Messages</pluralLabel>
</CustomObject>