MODON MRE BPDEV/force-app/main/default/objects/Integration_Error_Messages__mdt/fields/System_Error_Msg__c.field-meta.xml
<CustomField>
    <fullName>System_Error_Msg__c</fullName>
    <label>System Error Msg</label>
    <type>TextArea</type>
</CustomField>