MODON MRE BPDEV/force-app/main/default/objects/Integration_Error_Messages__mdt/fields/User_Error_Msg__c.field-meta.xml
<CustomField>
    <fullName>User_Error_Msg__c</fullName>
    <label>User Error Msg</label>
    <type>TextArea</type>
</CustomField>